--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -86,6 +86,7 @@
 }
 .buscadorServices{
     width: 50%;
+    max-width: 1050px;
     margin: $sectionMargin;
     p{
         font-size: $regularText;
