--- a/views/contactus.html
+++ b/views/contactus.html
@@ -33,45 +33,48 @@
     <!-- Header -->
 
     <header class="header">
-        <a class="logo" href="../index.html">
-            <img class="logoDelord" src="../img/logo2.svg" alt="Logo Delord">
-        </a>
-        <input id="menu" type="checkbox">
-        <label for="menu">
-            <img class="drawer" src="../img/drawer.svg" alt="Menu">
-        </label>
-        <nav class="menu">
+        <div class="wrapHeader">
+
+            <a class="logo" href="../index.html">
+                <img class="logoDelord" src="../img/logo2.svg" alt="Logo Delord">
+            </a>
+            <input id="menu" type="checkbox">
             <label for="menu">
-                <img class="close" src="../img/close.svg" alt="Cerrar">
+                <img class="drawer" src="../img/drawer.svg" alt="Menu">
             </label>
-            <ul class="my-4 mx-4">
-                <li><a class="categoria py-4 px-4" href="../index.html"><img class="item" src="../img/home.svg" alt="Home">Inicio</a></li>
-                <li><a class="categoria py-4 px-4" href="services.html"><img class="item" src="../img/service.svg" alt="Servicio">Servicios</a></li>
-                <li><a class="categoria py-4 px-4" href="jobs.html"><img class="item" src="../img/job.svg" alt="Empleo">Empleos</a></li>
-                <li><a class="categoria py-4 px-4" href="testimonies.html"><img class="item" src="../img/testimony.svg" alt="Testimonio">Testimonios</a></li>
-                <li><a class="categoria py-4 px-4" href="contactus.html"><img class="item" src="../img/contact.svg" alt="contacto">Contactanos</a></li>
-            </ul>
-            <section class="socialMedia">
-                <a href="https://es-la.facebook.com/" target="_blank" >
-                    <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
-                </a>
-                <a href="https://linkedin.com/" target="_blank">
-                    <img src="../img/linkedin.svg" alt="Logo linkedin" class="iconLink">
-                </a>
-                <a href="https://twitter.com/" target="_blank">
-                    <img src="../img/twitter.svg" alt="Logo twitter" class="iconLink">
-                </a>
-                <a href="https://discord.com/" target="_blank">
-                    <img src="../img/discord.svg" alt="Logo discord" class="iconLink">
-                </a>
-                <a href="https://instagram.com/" target="_blank">
-                    <img src="../img/instagram.svg" alt="Logo instagram" class="iconLink">
-                </a>
-                <a href="https://youtube.com/" target="_blank">
-                    <img src="../img/youtube.svg" alt="Logo youtube" class="iconLink">
-                </a>
-            </section>
-        </nav>
+            <nav class="menu">
+                <label for="menu">
+                    <img class="close" src="../img/close.svg" alt="Cerrar">
+                </label>
+                <ul class="my-4 mx-4">
+                    <li><a class="categoria py-4 px-4" href="../index.html"><img class="item" src="../img/home.svg" alt="Home">Inicio</a></li>
+                    <li><a class="categoria py-4 px-4" href="services.html"><img class="item" src="../img/service.svg" alt="Servicio">Servicios</a></li>
+                    <li><a class="categoria py-4 px-4" href="jobs.html"><img class="item" src="../img/job.svg" alt="Empleo">Empleos</a></li>
+                    <li><a class="categoria py-4 px-4" href="testimonies.html"><img class="item" src="../img/testimony.svg" alt="Testimonio">Testimonios</a></li>
+                    <li><a class="categoria py-4 px-4" href="contactus.html"><img class="item" src="../img/contact.svg" alt="contacto">Contactanos</a></li>
+                </ul>
+                <section class="socialMedia">
+                    <a href="https://es-la.facebook.com/" target="_blank" >
+                        <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
+                    </a>
+                    <a href="https://linkedin.com/" target="_blank">
+                        <img src="../img/linkedin.svg" alt="Logo linkedin" class="iconLink">
+                    </a>
+                    <a href="https://twitter.com/" target="_blank">
+                        <img src="../img/twitter.svg" alt="Logo twitter" class="iconLink">
+                    </a>
+                    <a href="https://discord.com/" target="_blank">
+                        <img src="../img/discord.svg" alt="Logo discord" class="iconLink">
+                    </a>
+                    <a href="https://instagram.com/" target="_blank">
+                        <img src="../img/instagram.svg" alt="Logo instagram" class="iconLink">
+                    </a>
+                    <a href="https://youtube.com/" target="_blank">
+                        <img src="../img/youtube.svg" alt="Logo youtube" class="iconLink">
+                    </a>
+                </section>
+            </nav>
+        </div>
     </header>
 
     <!-- Main -->
@@ -273,72 +276,74 @@
     <!-- Footer -->
 
     <footer class="footer">
-        <div class="mainFooter">
-            <section class="services">
-                <a class="my-1" href="../index.html">
-                    <img class="logo" src="../img/logo2.svg" alt="Logo Delord">
-                </a>
-                <article class="apps">
-                    <h4>Proximamente</h4>
-                    <a href="https://play.google.com/store/games?hl=es_419&gl=US&pli=1" target="_blank"><img class="app mb-1" src="../img/playstore.svg" alt="Play Store"></a>
-                    <a href="https://www.apple.com/co/app-store/" target="_blank"><img class="app mb-1" src="../img/appstore.svg" alt="App Store"></a>
-                </article>
-            </section>
-            </section>
-            <section class="footerMedium">
-                <article class="news">
-                    <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
-                    <div class="accion">
-                        <input id="email" placeholder="Email" type="email">
-                        <a href="error404.html" class="btnAccion">Enviar</a>
-                    </div>
-                </article>
-            </section>
-            <nav class="menu">
-                <ul>
-                    <li><a class="categoria" href="../index.html">Inicio</a></li>
-                    <li><a class="categoria" href="services.html">Servicios</a></li>
-                    <li><a class="categoria" href="jobs.html">Empleos</a></li>
-                    <li><a class="categoria" href="testimonies.html">Testimonios</a></li>
-                    <li><a class="categoria" href="contactus.html">Contactanos</a></li>
+        <div class="wrapFooter">
+            <div class="mainFooter">
+                <section class="services">
+                    <a class="my-1" href="../index.html">
+                        <img class="logo" src="../img/logo2.svg" alt="Logo Delord">
+                    </a>
+                    <article class="apps">
+                        <h4>Proximamente</h4>
+                        <a href="https://play.google.com/store/games?hl=es_419&gl=US&pli=1" target="_blank"><img class="app mb-1" src="../img/playstore.svg" alt="Play Store"></a>
+                        <a href="https://www.apple.com/co/app-store/" target="_blank"><img class="app mb-1" src="../img/appstore.svg" alt="App Store"></a>
+                    </article>
+                </section>
+                </section>
+                <section class="footerMedium">
+                    <article class="news">
+                        <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
+                        <div class="accion">
+                            <input id="email" placeholder="Email" type="email">
+                            <a href="error404.html" class="btnAccion">Enviar</a>
+                        </div>
+                    </article>
+                </section>
+                <nav class="menu">
+                    <ul>
+                        <li><a class="categoria" href="../index.html">Inicio</a></li>
+                        <li><a class="categoria" href="services.html">Servicios</a></li>
+                        <li><a class="categoria" href="jobs.html">Empleos</a></li>
+                        <li><a class="categoria" href="testimonies.html">Testimonios</a></li>
+                        <li><a class="categoria" href="contactus.html">Contactanos</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <section class="containerSocialMedia">
+                <ul class="socialMedia">
+                    <li>
+                        <a href="https://es-la.facebook.com/" target="_blank" >
+                            <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://linkedin.com/" target="_blank">
+                            <img src="../img/linkedin.svg" alt="Logo linkedin" class="iconLink">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/" target="_blank">
+                            <img src="../img/twitter.svg" alt="Logo twitter" class="iconLink">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://discord.com/" target="_blank">
+                            <img src="../img/discord.svg" alt="Logo discord" class="iconLink">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com/" target="_blank">
+                            <img src="../img/instagram.svg" alt="Logo instagram" class="iconLink">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://youtube.com/" target="_blank">
+                            <img src="../img/youtube.svg" alt="Logo youtube" class="iconLink">
+                        </a>
+                    </li>
                 </ul>
-            </nav>
+                <p>Desarrollado y hecho con 🧡 por Diego Marín | Medellín Colombia | 2023</p>
+            </section>
         </div>
-        <section class="containerSocialMedia">
-            <ul class="socialMedia">
-                <li>
-                    <a href="https://es-la.facebook.com/" target="_blank" >
-                        <img src="../img/facebook.svg" alt="Logo facebook" class="iconLink">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://linkedin.com/" target="_blank">
-                        <img src="../img/linkedin.svg" alt="Logo linkedin" class="iconLink">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://twitter.com/" target="_blank">
-                        <img src="../img/twitter.svg" alt="Logo twitter" class="iconLink">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://discord.com/" target="_blank">
-                        <img src="../img/discord.svg" alt="Logo discord" class="iconLink">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://instagram.com/" target="_blank">
-                        <img src="../img/instagram.svg" alt="Logo instagram" class="iconLink">
-                    </a>
-                </li>
-                <li>
-                    <a href="https://youtube.com/" target="_blank">
-                        <img src="../img/youtube.svg" alt="Logo youtube" class="iconLink">
-                    </a>
-                </li>
-            </ul>
-            <p>Desarrollado y hecho con 🧡 por Diego Marín | Medellín Colombia | 2023</p>
-        </section>
     </footer>
 
     <!-- JS -->
